<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">


    <ScrollView
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical" >



            <EditText
                android:id="@+id/fnameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/fnameHint"
                android:inputType="textPersonName"
                android:paddingBottom="20dp"
                android:paddingTop="10dp" />

            <EditText
                android:id="@+id/uidET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/uidHint"
                android:inputType="number"
                android:paddingBottom="20dp"
                android:paddingTop="20dp" />

            <EditText
                android:id="@+id/passwordET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/passwordHint"
                android:inputType="textPassword"
                android:paddingBottom="20dp"
                android:paddingTop="20dp" />

            <EditText
                android:id="@+id/cpasswordET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/cpasswordHint"
                android:inputType="textPassword"
                android:paddingBottom="20dp"
                android:paddingTop="20dp"/>

            <EditText
                android:id="@+id/emailET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/emailHint"
                android:inputType="textEmailAddress"
                android:paddingBottom="20dp"
                android:paddingTop="20dp" />


            <EditText
                android:id="@+id/dobET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/licenseHint"
                android:inputType="textPersonName"
                android:paddingBottom="20dp"
                android:paddingTop="20dp" />

            <EditText
                android:id="@+id/addressET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/addressHint"
                android:inputType="textPersonName"
                android:paddingBottom="20dp"
                android:paddingTop="20dp" />

            <Button
                android:id="@+id/submitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Submit"
                android:paddingBottom="20dp"
                android:paddingTop="20dp"/>

        </LinearLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>
